# math_packages_2021

./: Untitled.ipynb  main.cpp
MP/: lab1.ipynb
MP/lab2/: lab2.ipynb
MP/lab3/: lab3.ipynb
VM/: CMakeLists.txt  main.cpp
VM/Matrix/: Matrix.cpp  Matrix.h
VM/Quaternion/: Quaternion.cpp  Quaternion.h
VM/RigidBody/: RigidBody.cpp  RigidBody.h
VM/Triple/: Triple.cpp  Triple.h
nginx/data/www/: GameHandler.js  LogicTetris.js  SaveScript.js  VisualTetris.js  grid.css  index.html  main.html
nginx/ssl/: example.crt  example.key
